# wyoming-openai-tts

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run.sh  test_server.py  test_tts.py
.github/workflows/: builder_release.yml  lint.yaml  test.yaml
scripts/: start.sh
tests/: conftest.py  test_openai_tts.py
wyoming_openai_tts/: __init__.py  __main__.py  download.py  handler.py  openai_tts.py  voices.json
